--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,12 @@
     "axios": "^0.21.1",
     "http-proxy-middleware": "^0.19.1",
     "query-string": "^4.3.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-emoji": "^0.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.1.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
